# rust-api-template

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  audit.toml  render.yaml  sonar-project.properties
.github/: copilot-instructions.md
.github/workflows/: build.yml  cd.yml
docker/bdd/: docker-compose.yml
docs/: IA_CONTEXT.md  module_generator.md  redis_rate_limiter.md  rust_docs.md  tests.md
migrations/2026-03-06-154618-0000_create_users/: down.sql  up.sql
migrations/2026-03-07-071909-0000_create_posts/: down.sql  up.sql
script/: cov.ps1
src/: lib.rs  main.rs
src/app/: config.rs  models.rs  server.rs
src/bootstrap/: config.rs  mod.rs  models.rs  router.rs  server.rs
src/config/: api_config.rs  mod.rs  state.rs
src/core/: errors.rs  extractor.rs  logger.rs  mod.rs  params.rs  repository.rs  validator.rs
src/core/middlewares/: auth.rs  rate_limit.rs
src/db/: mod.rs  schema.rs
src/db/post/: model.rs  repository.rs
src/db/user/: model.rs  repository.rs
src/infra/: config.rs  state.rs
src/launch/: mod.rs  router.rs  swagger.rs
src/modules/: mod.rs
src/modules/auth/: dto.rs  handler.rs  helpers.rs  mod.rs  service.rs
src/modules/health/: dto.rs  handler.rs  mod.rs
src/modules/post/: dto.rs  handler.rs  mod.rs  service.rs
src/modules/user/: dto.rs  handler.rs  mod.rs  service.rs
src/routes/: mod.rs  swagger.rs
src/server/: mod.rs  router.rs
tests/: cucumber.rs  e2e_auth_test.rs  e2e_post_tests.rs  e2e_user_tests.rs
tests/common/: mod.rs
tests/features/: auth.feature  post.feature  user.feature
tests/steps/: auth_steps.rs  post_steps.rs  user_steps.rs
