[package]
name = "app"
version = "0.1.0"
edition = "2024"

[lib]
name = "app"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true        # Link Time Optimization — binaire plus rapide
codegen-units = 1 # Meilleure optimisation, build plus lent
strip = true      # Supprime les symboles de debug — binaire plus petit

[dependencies]
# API
axum = { version = "0.8.8" }
axum-extra = { version = "0.12.5", features = ["cookie"] }
tokio = { version = "1.50.0", features = ["full"] }
dotenvy = "0.15"
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Pour CORS et Logs
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6.8", features = [
    "cors",
    "trace",
    "limit",
    "compression-full",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }


# Database
diesel = { version = "2.3.6", features = ["postgres", "uuid", "chrono"] }
diesel-async = { version = "0.7.4", features = ["postgres", "bb8"] }
diesel_migrations = { version = "2", features = ["postgres"] }


# Utils
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
serde_json = "1.0.149"
anyhow = "1.0.102"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
bcrypt = "0.19.0"
validator = { version = "0.20.0", features = ["derive"] }
time = "0.3"
